Implement endpoint returning the list of URLs for the user currently logged in (backend only)
